<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:scrollbars="none"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:alpha="0.80"
                android:gravity="center"
                android:lineSpacingExtra="-4sp"
                android:text="@string/title"
                android:textAlignment="gravity"
                android:textColor="#FFFFFFFF"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.wearable.view.CircledImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="8dp"
                    android:alpha="0.80"
                    android:src="@drawable/round_calendar_month_24"
                    app:circle_border_color="@color/light_grey"
                    app:circle_border_width="3dp"
                    app:circle_color="@android:color/transparent"
                    app:circle_radius="26dp"
                    app:circle_radius_pressed="25dp"
                    app:image_tint="@color/light_grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:alpha="0.80"
                    android:gravity="center_vertical|start"
                    android:lineSpacingExtra="-4sp"
                    android:text="@string/date"
                    android:textAlignment="viewStart"
                    android:textColor="#FFFFFFFF"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.wearable.view.CircledImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="8dp"
                    android:alpha="0.80"
                    android:src="@drawable/round_access_time_24"
                    app:circle_border_color="@color/light_grey"
                    app:circle_border_width="3dp"
                    app:circle_color="@android:color/transparent"
                    app:circle_radius="26dp"
                    app:circle_radius_pressed="25dp"
                    app:image_tint="@color/light_grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:alpha="0.80"
                    android:gravity="center_vertical|start"
                    android:lineSpacingExtra="-4sp"
                    android:text="@string/time"
                    android:textAlignment="viewStart"
                    android:textColor="#FFFFFFFF"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/timeZone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.wearable.view.CircledImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="8dp"
                    android:alpha="0.80"
                    android:src="@drawable/baseline_public_24"
                    app:circle_border_color="@color/light_grey"
                    app:circle_border_width="3dp"
                    app:circle_color="@android:color/transparent"
                    app:circle_radius="26dp"
                    app:circle_radius_pressed="25dp"
                    app:image_tint="@color/light_grey" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:alpha="0.80"
                        android:gravity="center_vertical|start"
                        android:lineSpacingExtra="-4sp"
                        android:text="@string/timeZone"
                        android:textAlignment="viewStart"
                        android:textColor="#FFFFFFFF"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:alpha="0.80"
                        android:ellipsize="marquee"
                        android:fadingEdge="horizontal"
                        android:gravity="center_vertical|start"
                        android:lineSpacingExtra="-4sp"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:singleLine="true"
                        android:text="@string/setting_up"
                        android:textAlignment="viewStart"
                        android:textColor="#98FFFFFF"
                        android:textSize="14sp"
                        android:visibility="gone"
                        tools:visibility="visible" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>